--- a/src/index.html
+++ b/src/index.html
@@ -6,42 +6,81 @@
     <title>Allimni</title>
 </head>
 <body>
-    <header>
-        <div class="container-fluid"> <!-- test -->
-            <section class="top-menu">
-                <div class="row">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <a href="index.html" class="navbar-brand p-0">
-                            <img src="assets/images/noun-school-3652203.png" alt="school">
-                        </a>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                          <ul class="navbar-nav ml-auto">
-                            <li class="nav-item p-2">
-                              <a class="nav-link" href="index.html">الرئيسية</a>
-                            </li>
-                            <li class="nav-item p-2">
-                              <a class="nav-link" href="about.html">عن الشركة</a>
-                            </li>
-                            <li class="nav-item p-2">
-                              <a class="nav-link" href="projects.html">مشاريعنا</a>
-                            </li>
-                            <li class="nav-item p-2">
-                              <a class="nav-link" href="blog.html">المدونة</a>
-                            </li>
-                            <li class="nav-item p-2">
-                              <a class="nav-link" href="contact.html">تواصل معنا</a>
-                            </li>
-                          </ul>
-                        </div>
-                    </nav>
+  <div class="container-fluid">
+    <section class="top-menu">
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white w-100 font-weight-bold shadow-sm">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a href="index.html" class="navbar-brand d-flex align-items-center p-0">
+            <img src="assets/images/school-logo1.svg" alt="school" class="img-fluid logo"
+              style="width: 70px; height: 70px;">
+            <span class="ml-2 font-weight-bold text-primary" style="font-size: 24px;">علمني</span>
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item p-2">
+                <a class="nav-link text-dark" href="index.html">الرئيسية</a>
+              </li>
+              <li class="nav-item p-2">
+                <a class="nav-link text-dark" href="#activities">نشاطاتنا</a>
+              </li>
+              <li class="nav-item p-2">
+                <a class="nav-link text-dark" href="#students">تلاميذنا</a>
+              </li>
+              <li class="nav-item p-2">
+                <a class="nav-link text-dark" href="#stars">نجوم المدرسة</a>
+              </li>
+              <li class="nav-item p-2">
+                <a class="nav-link text-dark" href="#contact">تواصل معنا</a>
+              </li>
+              <li class="nav-item p-2">
+                <a class="btn btn-primary text-white" href="login.html">تسجيل الدخول</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
+    
+    <section class="carousel-top">
+      <div class="row">
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/images/carousel-1.jpg" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block overlay">
+                  </div>
                 </div>
-                <img src="assets/images/carousel-1.jpg" style="height: 200px; width: 200px;" alt="">
-            </section>
-        </div>
-    </header>
+                <div class="carousel-item">
+                  <img src="assets/images/carousel-2.jpg" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block overlay">
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/carousel-3.jpg" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block overlay">
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
