--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link text-dark" href="#students">تلاميذنا</a>
               </li>
               <li class="nav-item p-2">
-                <a class="nav-link text-dark" href="#stars">نجوم المدرسة</a>
+                <a class="nav-link text-dark" href="#school-stars">نجوم المدرسة</a>
               </li>
               <li class="nav-item p-2">
                 <a class="nav-link text-dark" href="#contact">تواصل معنا</a>
@@ -174,7 +174,6 @@
       <div class="students-title text-center mb-5">
         <h3>تلاميذنا</h3>
       </div>
-
       <div class="container">
         <div id="studentsCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
@@ -322,25 +321,25 @@
           <div class="col-md-4">
             <div class="contact-info">
               <div class="info-item">
-                <!-- <i class="fas fa-map-marker-alt"></i> -->
+                <i class="fas fa-map-marker-alt"></i>
                 <h5>العنوان</h5>
                 <p>شارع المدارس، حي النور، المدينة</p>
               </div>
               <div class="info-item">
-                <!-- <i class="fas fa-phone"></i> -->
+                <i class="fas fa-phone"></i>
                 <h5>الهاتف</h5>
                 <p>+966 12 345 6789</p>
               </div>
               <div class="info-item">
-                <!-- <i class="fas fa-envelope"></i> -->
+                <i class="fas fa-envelope"></i>
                 <h5>البريد الإلكتروني</h5>
                 <p>info@allimni.com</p>
               </div>
-              <!-- <div class="social-links">
+              <div class="social-links">
                 <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-              </div> -->
+              </div>
             </div>
           </div>
     
@@ -357,6 +356,13 @@
         </div>
       </div>
     </section>
+
+    
   </div>
+  <footer>
+    <div class="copyright">
+      <p>جميع الحقوق محفوظة <span id="fullYear"></span>&copy;</p>
+    </div>
+  </footer>    
 </body>
 </html>
