student pages added, some modifications

--- a/src/index.html
+++ b/src/index.html
@@ -287,7 +287,7 @@
               <div class="star-info text-center">
                 <h4 class="student-name">أحمد محمد</h4>
                 <p class="star-category">المركز الأول</p>
-                <a href="#" class="btn-more">عن الطالب</a>
+                <a href="student-page1.html" class="btn-more">صفحة الطالب</a>
               </div>
             </div>
           </div>
@@ -301,7 +301,7 @@
               <div class="star-info text-center">
                 <h4>سارة أحمد</h4>
                 <p class="star-category">المركز الثاني</p>
-                <a href="#" class="btn-more">عن الطالب</a>
+                <a href="student-page2.html" class="btn-more">صفحة الطالب</a>
               </div>
             </div>
           </div>
