--- a/src/login.html
+++ b/src/login.html
@@ -14,13 +14,19 @@
     <div class="login-box shadow-lg">
       <h2 class="login-title">تسجيل الدخول</h2>
       <form>
-        <div class="form-group">
+        <div class="form-group input-icon">
           <label for="email">البريد الإلكتروني</label>
-          <input type="email" id="email" class="form-control" placeholder="example@email.com" required />
+          <div class="input-wrapper">
+            <i class="fas fa-envelope"></i>
+            <input type="email" id="email" class="form-control" placeholder="example@email.com" required />
+          </div>
         </div>
-        <div class="form-group">
+        <div class="form-group input-icon">
           <label for="password">كلمة المرور</label>
-          <input type="password" id="password" class="form-control" placeholder="********" required />
+          <div class="input-wrapper">
+            <i class="fas fa-lock"></i>
+            <input type="password" id="password" class="form-control" placeholder="********" required />
+          </div>
         </div>
         <button type="submit" class="btn btn-login">دخول</button>
       </form>
