--- a/src/login.html
+++ b/src/login.html
@@ -32,7 +32,7 @@
       </form>
 
       <div class="login-footer mt-3 d-flex justify-content-between flex-column flex-md-row text-center text-md-right">
-        <p class="mb-2 mb-md-0"><a href="#">هل نسيت كلمة المرور؟</a></p>
+        <p class="mb-2 mb-md-0"><a href="register.html">هل نسيت كلمة المرور؟</a></p>
         <p>ليس لديك حساب؟ <a href="register.html">سجل الآن</a></p>
       </div>
     </div>
